# lin-os

./: Cargo.toml  README.md  log.txt  test_helper.js
.cargo/: config
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
