
[package]
name = "lin_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bootloader 别人实现好的一个BIOS引导程序
bootloader = "0.9.20"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
# uart 串口通信
uart_16550 = "0.2.0"
# pic8259中断的库
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"



[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


# 令bootimage使用xbuild进行编译
[package.metadata.bootimage]
build-command = ["xbuild"] 
# 让bootimage 启动qemu(test的时候)的时候传入参数 qemu模拟退出设备- io端口号 以及大小
# 添加串口(默认端口号0x3F8)--到host 的stdio 
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    # "-serial", "file:E:/Project/blogOs/lin_os/log.txt",
    # "-serial", "stdio", # 好像只支持unix
    "-serial", "tcp:127.0.0.1:4569",
    "-display", "none",
]
# 测试成功的返回码
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds) 设置测试超时时间


